<resources>
    <string name="app_name">DedyMizwarApp</string>
    <string name="profile">Profil</string>
    <string name="activity">Aktifitas</string>
    <string name="gallery">Galeri</string>
    <string name="video">Video</string>
    <string name="q_and_a">Tanya Jawab</string>
    <string name="send_message">Kirim Pesan</string>
    <string name="maps">Maps</string>
    <string name="social_media">Social Media</string>
    <string name="about_app">Tentang Aplikasi</string>

    <string name="text_profile">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sequi consequuntur maiores animi repudiandae dolor aliquam modi aliquid reiciendis est? Voluptatibus officia, illo, libero odit soluta non dolorum officiis quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sequi consequuntur maiores animi repudiandae dolor aliquam modi aliquid reiciendis est? Voluptatibus officia, illo, libero odit soluta non dolorum officiis quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sequi consequuntur maiores animi repudiandae dolor aliquam modi aliquid reiciendis est? Voluptatibus officia, illo, libero odit soluta non dolorum officiis quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sequi consequuntur maiores animi repudiandae dolor aliquam modi aliquid reiciendis est? Voluptatibus officia, illo, libero odit soluta non dolorum officiis quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sequi consequuntur maiores animi repudiandae dolor aliquam modi aliquid reiciendis est? Voluptatibus officia, illo, libero odit soluta non dolorum officiis quam.</string>
    <string name="total_image">Total Foto</string>

    <string name="description_image">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sequi consequuntur maiores animi repudiandae dolor aliquam modi aliquid</string>
    <string name="total_video">Total Video</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email_address">Alamat Email</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="write_your_question">Tulis Pertanyaan Anda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="chat">Chat</string>
    <string name="beli_pulsa">Beli Pulsa</string>

</resources>
