<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_height"
                android:scaleType="center"
                android:src="@drawable/ic_video_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/video"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_fab" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_question"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_height"
                android:scaleType="center"
                android:src="@drawable/ic_discuss_issue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/q_and_a"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_fab" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_height"
                android:scaleType="center"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/send_message"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_fab" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>